--- a/client/src/pages/home/index.module.scss
+++ b/client/src/pages/home/index.module.scss
@@ -1,5 +1,9 @@
-.test {
-    background-color: red;
-    height: 100px;
-    width: 100px;
+.main {
+    max-width: 1920px;
+    width: 100%;
+    height: 500px;
+    background-color: rgb(248, 227, 227);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
